[#12297] refactor(secret): Align catalog/schema with fileset secret helpers
Rebase onto the fileset create-secrets tip, switch to rollbackBindings /
deleteBindingsFromProperties / checkSecretKeys, and shorten catalog/schema
secret unit tests to match #12366 cleanup.

Co-authored-by: Cursor <cursoragent@cursor.com>